1. update KafkaListener 2. update ListenerPluginCOntroller

--- a/dolphinscheduler-api/src/main/resources/application.yaml
+++ b/dolphinscheduler-api/src/main/resources/application.yaml
@@ -115,6 +115,9 @@ registry:
     block-until-connected: 600ms
     digest: ~
 
+listener:
+  type: jdbc
+
 api:
   audit-enable: false
   # Traffic control, if you turn on this config, the maximum number of request/s will be limited.
