--- a/dolphinscheduler-master/src/main/resources/application.yaml
+++ b/dolphinscheduler-master/src/main/resources/application.yaml
@@ -83,6 +83,9 @@ registry:
     block-until-connected: 600ms
     digest: ~
 
+listener:
+  type: jdbc
+
 master:
   listen-port: 5678
   # master fetch command num
