1. code format 2. resolve conflict caused by RPC refactoring

--- a/dolphinscheduler-listener/dolphinscheduler-listener-service/pom.xml
+++ b/dolphinscheduler-listener/dolphinscheduler-listener-service/pom.xml
@@ -32,7 +32,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.dolphinscheduler</groupId>
-            <artifactId>dolphinscheduler-remote</artifactId>
+            <artifactId>dolphinscheduler-extract-listener</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.dolphinscheduler</groupId>
