[Feature-14802][feat] Use Casdoor SSO to log in, add admin user configuration
    Use Casdoor SSO to log in, add admin user configuration

This closes #14802

--- a/dolphinscheduler-api/src/test/resources/application.yaml
+++ b/dolphinscheduler-api/src/test/resources/application.yaml
@@ -87,6 +87,9 @@ security:
         # jks file absolute path && password
         trust-store: "/ldapkeystore.jks"
         trust-store-password: "password"
+    casdoor:
+      user:
+        admin: ""
     oauth2:
       enable: true
       provider:
