--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,7 @@
         <skipDepCheck>true</skipDepCheck>
         <build.ui.skip>false</build.ui.skip>
         <spotless.skip>false</spotless.skip>
+        <xugu-jdbc.version>12.1.6</xugu-jdbc.version>
     </properties>
 
     <dependencyManagement>
@@ -329,6 +330,10 @@
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.xugu</groupId>
+            <artifactId>xugu-jdbc</artifactId>
         </dependency>
     </dependencies>
 
