--- a/pom.xml
+++ b/pom.xml
@@ -331,10 +331,15 @@
             <version>${lombok.version}</version>
             <scope>provided</scope>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.xugudb/xugu-jdbc -->
         <dependency>
-            <groupId>com.xugu</groupId>
+            <groupId>com.xugudb</groupId>
             <artifactId>xugu-jdbc</artifactId>
+            <version>${xugu-jdbc.version}</version>
         </dependency>
+
+
     </dependencies>
 
     <build>
