--- a/deploy/kubernetes/dolphinscheduler/templates/secret-external-database.yaml
+++ b/deploy/kubernetes/dolphinscheduler/templates/secret-external-database.yaml
@@ -25,7 +25,7 @@ metadata:
 type: Opaque
 data:
   database-password: {{ .Values.externalDatabase.password | b64enc | quote }}
-  {{- if .Values.registryJdbc.hikariConfig.username }}
+  {{- if .Values.registryJdbc.hikariConfig.enabled }}
   registry-password: {{ .Values.registryJdbc.hikariConfig.password | b64enc | quote }}
   {{- end }}
 {{- end }}
