--- a/deploy/kubernetes/dolphinscheduler/templates/secret-registry-database.yaml
+++ b/deploy/kubernetes/dolphinscheduler/templates/secret-registry-database.yaml
@@ -14,15 +14,15 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-{{- if not .Values.postgresql.enabled }}
+{{- if .Values.registryJdbc.hikariConfig.enabled }}
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "dolphinscheduler.fullname" . }}-externaldb
+  name: {{ include "dolphinscheduler.fullname" . }}-registry-db
   labels:
-    app.kubernetes.io/name: {{ include "dolphinscheduler.fullname" . }}-externaldb
+    app.kubernetes.io/name: {{ include "dolphinscheduler.fullname" . }}-registry-db
     {{- include "dolphinscheduler.common.labels" . | nindent 4 }}
 type: Opaque
 data:
-  database-password: {{ .Values.externalDatabase.password | b64enc | quote }}
+  registry-password: {{ .Values.registryJdbc.hikariConfig.password | b64enc | quote }}
 {{- end }}
