--- a/dolphinscheduler-api/src/main/resources/application.yaml
+++ b/dolphinscheduler-api/src/main/resources/application.yaml
@@ -114,8 +114,8 @@ registry:
       max-sleep: 300ms
       max-retries: 5
     session-timeout: 30s
-    connection-timeout: 9s
-    block-until-connected: 600ms
+    connection-timeout: 30s
+    block-until-connected: 30s
     digest: ~
 
 api:
