add xugu datasource

--- a/dolphinscheduler-datasource-plugin/dolphinscheduler-datasource-all/pom.xml
+++ b/dolphinscheduler-datasource-plugin/dolphinscheduler-datasource-all/pom.xml
@@ -138,5 +138,11 @@
             <artifactId>dolphinscheduler-datasource-doris</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.dolphinscheduler</groupId>
+            <artifactId>dolphinscheduler-datasource-xugu</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 </project>
