--- a/dolphinscheduler-datasource-plugin/dolphinscheduler-datasource-xugu/pom.xml
+++ b/dolphinscheduler-datasource-plugin/dolphinscheduler-datasource-xugu/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>org.apache.dolphinscheduler</groupId>
         <artifactId>dolphinscheduler-datasource-plugin</artifactId>
-        <version>3.1.9-SNAPSHOT</version>
+        <version>dev-SNAPSHOT</version>
     </parent>
 
     <artifactId>dolphinscheduler-datasource-xugu</artifactId>
@@ -43,16 +43,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
-            <type>jar</type>
-            <scope>test</scope>
+            <groupId>com.xugudb</groupId>
+            <artifactId>xugu-jdbc</artifactId>
         </dependency>
-        <dependency>
-            <groupId>commons-lang</groupId>
-            <artifactId>commons-lang</artifactId>
-            <version>2.6</version>
-            <scope>compile</scope>
-        </dependency>
+
     </dependencies>
 </project>
