--- a/deploy/kubernetes/dolphinscheduler/values.yaml
+++ b/deploy/kubernetes/dolphinscheduler/values.yaml
@@ -300,6 +300,7 @@ common:
     storage: "20Gi"
 
 master:
+  enabled: true
   ## PodManagementPolicy controls how pods are created during initial scale up, when replacing pods on nodes, or when scaling down.
   podManagementPolicy: "Parallel"
   ## Replicas is the desired number of replicas of the given Template.
@@ -387,6 +388,7 @@ master:
       annotations: {}
 
 worker:
+  enabled: true
   ## PodManagementPolicy controls how pods are created during initial scale up, when replacing pods on nodes, or when scaling down.
   podManagementPolicy: "Parallel"
   ## Replicas is the desired number of replicas of the given Template.
@@ -504,6 +506,7 @@ worker:
 
 
 alert:
+  enabled: true
   ## Number of desired pods. This is a pointer to distinguish between explicit zero and not specified. Defaults to 1.
   replicas: 1
   ## The deployment strategy to use to replace existing pods with new ones.
@@ -581,6 +584,7 @@ alert:
 
 
 api:
+  enabled: true
   ## Number of desired pods. This is a pointer to distinguish between explicit zero and not specified. Defaults to 1.
   replicas: "1"
   ## The deployment strategy to use to replace existing pods with new ones.
