--- a/deploy/kubernetes/dolphinscheduler/values.yaml
+++ b/deploy/kubernetes/dolphinscheduler/values.yaml
@@ -300,6 +300,7 @@ common:
     storage: "20Gi"
 
 master:
+  ## Enable or disable the Master component
   enabled: true
   ## PodManagementPolicy controls how pods are created during initial scale up, when replacing pods on nodes, or when scaling down.
   podManagementPolicy: "Parallel"
@@ -388,6 +389,7 @@ master:
       annotations: {}
 
 worker:
+  ## Enable or disable the Worker component
   enabled: true
   ## PodManagementPolicy controls how pods are created during initial scale up, when replacing pods on nodes, or when scaling down.
   podManagementPolicy: "Parallel"
@@ -506,6 +508,7 @@ worker:
 
 
 alert:
+  ## Enable or disable the Alert-Server component
   enabled: true
   ## Number of desired pods. This is a pointer to distinguish between explicit zero and not specified. Defaults to 1.
   replicas: 1
@@ -584,6 +587,7 @@ alert:
 
 
 api:
+  ## Enable or disable the API-Server component
   enabled: true
   ## Number of desired pods. This is a pointer to distinguish between explicit zero and not specified. Defaults to 1.
   replicas: "1"
