Reduce the size of tarball to continue ASF release
for more detail you can see https://lists.apache.org/thread/rmp7fghlj0n7h9y2v3p8gkw9f9qbo6qt

--- a/dolphinscheduler-storage-plugin/dolphinscheduler-storage-oss/pom.xml
+++ b/dolphinscheduler-storage-plugin/dolphinscheduler-storage-oss/pom.xml
@@ -38,5 +38,10 @@
             <artifactId>dolphinscheduler-task-api</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.aliyun.oss</groupId>
+            <artifactId>aliyun-sdk-oss</artifactId>
+        </dependency>
     </dependencies>
 </project>
