--- a/dolphinscheduler-api-test/dolphinscheduler-api-test-case/pom.xml
+++ b/dolphinscheduler-api-test/dolphinscheduler-api-test-case/pom.xml
@@ -49,7 +49,12 @@
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
-            <version>${httpclient.version}</version>
+            <version>4.5.13</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpmime</artifactId>
+            <version>4.5.13</version>
         </dependency>
     </dependencies>
 </project>
