--- a/deploy/kubernetes/dolphinscheduler/templates/secret-registry-database.yaml
+++ b/deploy/kubernetes/dolphinscheduler/templates/secret-registry-database.yaml
@@ -14,17 +14,15 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-{{- if .Values.registryEtcd.ssl.enabled }}
+{{- if .Values.registryJdbc.hikariConfig.enabled }}
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "dolphinscheduler.fullname" . }}-etcd-ssl
+  name: {{ include "dolphinscheduler.fullname" . }}-registry-db
   labels:
-    app.kubernetes.io/name: {{ include "dolphinscheduler.fullname" . }}-etcd-ssl
+    app.kubernetes.io/name: {{ include "dolphinscheduler.fullname" . }}-registry-db
     {{- include "dolphinscheduler.common.labels" . | nindent 4 }}
 type: Opaque
 data:
-  cert-file: {{ .Files.Get .Values.registryEtcd.ssl.certFile | b64enc | quote }}
-  key-cert-chain-file: {{ .Files.Get .Values.registryEtcd.ssl.keyCertChainFile | b64enc | quote }}
-  key-file: {{ .Files.Get .Values.registryEtcd.ssl.keyFile | b64enc | quote }}
+  registry-password: {{ .Values.registryJdbc.hikariConfig.password | b64enc | quote }}
 {{- end }}
