[Fix-14885][pom] fix spotless format file path (#14889)
* fix: fix `spotless` format file path

* fix: remove duplicate dependencies

---------

Co-authored-by: Eric Gao <ericgao.apache@gmail.com>
Co-authored-by: Aaron Wang <wangweirao16@gmail.com>
Co-authored-by: xiangzihao <460888207@qq.com>

--- a/pom.xml
+++ b/pom.xml
@@ -656,11 +656,11 @@
                     <skip>${spotless.skip}</skip>
                     <java>
                         <eclipse>
-                            <file>style/spotless_dolphinscheduler_formatter.xml</file>
+                            <file>${maven.multiModuleProjectDirectory}/style/spotless_dolphinscheduler_formatter.xml</file>
                         </eclipse>
                         <removeUnusedImports />
                         <importOrder>
-                            <file>style/eclipse.importorder</file>
+                            <file>${maven.multiModuleProjectDirectory}/style/eclipse.importorder</file>
                         </importOrder>
                         <replaceRegex>
                             <name>Remove wildcard imports</name>
