--- a/dolphinscheduler-datasource-plugin/dolphinscheduler-datasource-all/pom.xml
+++ b/dolphinscheduler-datasource-plugin/dolphinscheduler-datasource-all/pom.xml
@@ -153,5 +153,10 @@
             <artifactId>dolphinscheduler-datasource-k8s</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.dolphinscheduler</groupId>
+            <artifactId>dolphinscheduler-datasource-hana</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 </project>
