[Improvement][Helm] using helm-docs to generate docs automatically
Signed-off-by: Gallardot <gallardot@apache.org>

--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -50,5 +50,6 @@ header:
     - tools/dependencies/known-dependencies.txt
     - '**/banner.txt'
     - '.terraform.lock.hcl'
+    - deploy/kubernetes/dolphinscheduler/README.md.gotmpl
 
   comment: on-failure
